--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -2,29 +2,25 @@ name: Release
 
 on: [pull_request]
 
-#on:
-#  release:
-#    types: [published]
-
 jobs:
-  bump_alidist:
+  alidist:
     runs-on: ubuntu-latest
     steps:
-     - uses: actions/checkout@v2
-       repository: 'alisw/alidist'
-      - name: Change version in recipe
-        run: |
-          set +x
-          CURRENT_VERSION=`cat monitoring.sh | grep "tag:" | awk '{print $2}'`
-          sed -i "s/${CURRENT_VERSION}/${GITHUB_REF##*/}/g" monitoring.sh
-      - name: Add and push commit
-        run: |
-          set +x
-          git config --global user.email ${{ secrets.GH_EMAIL }}
-          git config --global user.name ${{ secrets.GH_USERNAME }}
-          git add .
-          git commit -m "Bump monitoring to ${GITHUB_REF##*/}"
-          git push "https://${{ secrets.GH_TOKEN }}@github.com/${{ secrets.ORG }}/alidist" HEAD:refs/heads/monitoring-${GITHUB_REF##*/}
-      - run: hub pull-request -h monitoring-${GITHUB_REF##*/} -b master -m "Bump monitoring to ${GITHUB_REF##*/}"
-        env:
-          GITHUB_TOKEN: ${{ secrets.GH_TOKEN }}
+    - uses: actions/checkout@v2
+      repository: 'alisw/alidist'
+    - name: Change version in recipe
+      run: |
+        set +x
+        CURRENT_VERSION=`cat monitoring.sh | grep "tag:" | awk '{print $2}'`
+        sed -i "s/${CURRENT_VERSION}/${GITHUB_REF##*/}/g" monitoring.sh
+    - name: Add and push commit
+      run: |
+        set +x
+        git config --global user.email ${{ secrets.GH_EMAIL }}
+        git config --global user.name ${{ secrets.GH_USERNAME }}
+        git add .
+        git commit -m "Bump monitoring to ${GITHUB_REF##*/}"
+        git push "https://${{ secrets.GH_TOKEN }}@github.com/${{ secrets.ORG }}/alidist" HEAD:refs/heads/monitoring-${GITHUB_REF##*/}
+    - run: hub pull-request -h monitoring-${GITHUB_REF##*/} -b master -m "Bump monitoring to ${GITHUB_REF##*/}"
+      env:
+        GITHUB_TOKEN: ${{ secrets.GH_TOKEN }}
