--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -9,6 +9,7 @@ jobs:
     - uses: actions/checkout@v2
       with:
         repository: 'alisw/alidist'
+        token: ${{ secrets.GITHUB_TOKEN }}
     - name: Change version in recipe
       run: |
         set +x
@@ -21,7 +22,7 @@ jobs:
         git config --global user.name ${{ secrets.GH_USERNAME }}
         git add .
         git commit -m "Bump monitoring to ${GITHUB_REF##*/}"
-        git push "https://${{ secrets.GITHUB_TOKEN }}@github.com/awegrzyn/alidist" HEAD:refs/heads/monitoring-${GITHUB_REF##*/}
+        git push "https://awegrzyn:${{ secrets.GITHUB_TOKEN }}@github.com/awegrzyn/alidist" HEAD:refs/heads/monitoring-${GITHUB_REF##*/}
     - run: hub pull-request -h monitoring-${GITHUB_REF##*/} -b master -m "Bump monitoring to ${GITHUB_REF##*/}"
       env:
         GITHUB_TOKEN: ${{ secrets.GH_TOKEN }}
